# AccessControlAttendanceSystem

./: README.md
pyserver/: .flaskenv  .gitignore  requirements.txt
pyserver/accesscont/: __init__.py  audioplay.py  commands.py  models.py  settings.py  views.py
testcode/clionproject/: CMakeLists.txt  SerialPort.cpp  SerialPort.h  main.cpp
